--- a/ui/SpiderUI.ui
+++ b/ui/SpiderUI.ui
@@ -16,9 +16,9 @@
   <property name="windowTitle">
    <string>农机需求信息爬取</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout_3">
+  <layout class="QHBoxLayout" name="horizontalLayout_4">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,4">
+    <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="1,5">
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
@@ -39,6 +39,30 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,4">
+         <item>
+          <widget class="QPushButton" name="graphButton">
+           <property name="text">
+            <string>查看图表</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_4">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>98</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item>
         <widget class="QTableView" name="SupplyInform">
          <property name="horizontalScrollBarPolicy">
           <enum>Qt::ScrollBarAsNeeded</enum>
@@ -55,7 +79,7 @@
         </widget>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,2,1,2,1">
+        <layout class="QHBoxLayout" name="horizontalLayout" stretch="2,3,2,3,2">
          <item>
           <spacer name="horizontalSpacer_2">
            <property name="orientation">
